Validation added to prevent from add/update shift for same clientname,type and location

--- a/AMS/Content/CustomCSS.css
+++ b/AMS/Content/CustomCSS.css
@@ -40,7 +40,6 @@
     }
 
 .assigned-labour {
-    width: 277px;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
